--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "^18.0.7",
     "@types/react-redux": "^7.1.24",
     "bulma": "^0.9.4",
+    "concurrently": "^7.5.0",
+    "less": "^4.1.3",
+    "less-watch-compiler": "^1.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -22,7 +25,7 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
