--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^7.5.0",
     "less": "^4.1.3",
     "less-watch-compiler": "^1.16.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
